@@ -1,3 +1,7 @@
+1998-05-18  Stephan Kulow  <coolo@kde.org>
+
+	* kfiledialog.cpp: bugfixes
+
 1998-05-15  Stephan Kulow  <coolo@kde.org>
 
 	* kfileinfocontents.cpp: some more changes and speed ups 
